# guess-my-number

./: Cargo.toml  README.md
.github/workflows/: rustdoc.yml
src/: auto_guesser.rs  histogram.rs  lib.rs  main.rs  number_game.rs
tests/: auto_guesser.rs  histogram.rs  number_guessing_game.rs
