[package]
name = "guess-my-number-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
csv = "1.2.1"
rand = "0.8.5"
serde = "1.0.160"
serde_derive = "1.0.160"
